--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,15 @@
 baseURL = 'https://gigabug.org/'
 languageCode = 'en-us'
 title = 'Gigabug'
-theme = "etch"
+theme = "mytheme"
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.extensions]
+      [markup.goldmark.extensions.passthrough]
+        enable = true
+        [markup.goldmark.extensions.passthrough.delimiters]
+          block = [['\[', '\]'], ['$$', '$$']]
+          inline = [['\(', '\)']]
+[params]
+  math = true
