--- a/themes/mytheme/hugo.toml
+++ b/themes/mytheme/hugo.toml
@@ -1,6 +1,5 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://mattbowring.com/'
 languageCode = 'en-US'
-title = 'My New Hugo Site'
 
 [[menus.main]]
 name = 'Home'
