--- a/themes/mytheme/hugo.toml
+++ b/themes/mytheme/hugo.toml
@@ -11,6 +11,11 @@ name = 'Products'
 pageRef = '/posts'
 weight = 20
 
+[[menus.main]]
+name = 'Contact'
+pageRef = '/contact'
+weight = 30
+
 [module]
   [module.hugoVersion]
     extended = false
